Rename parser to tagparser. Added JSON dump functionality - and a new cmdlet to execute the behavior.

--- a/cmd/tagStat/test.html
+++ b/cmd/tagStat/test.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Graphic Design is my Passion!</h1>
         <a href="https://www.youtube.com/watch?v=p3G5IXn0K7A">🐹</a>
-        <span style="color:red">Culture</span> and <span style="color: purple">Beauty</span>
+        <span style="color:red;">Culture</span> and <span style="color: purple;">Beauty</span>
     </body>
 </html>
